--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -46,7 +46,7 @@
 		<div style="top: 300px" class="card mb-5 p-5 w-50 m-auto  bg-opacity">
 			<div class="card-body text-center ">
 				<h5 class="card-title">"Izy Drive"</h5>
-				<p class="card-text sizetext">Réservez votre course facilement. Grâce à notre expertise, nous vous garantissons un voyage en toute sécurité .</p>
+				<p class="card-text sizetext">Réservez votre course facilement. Grâce à notre expertise, nous vous garantissons un voyage en toute sécurité .Vehicule sécurisé.</p>
 			
 		
 			</div>
