--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -5,9 +5,9 @@
 
 {% block body %}
 <br><br>
-	
-		<div class="container my-5 w-25 bg-dark border  text-center text-white ">
-			<h1 class="container my-5 ">Inscrivez-vous !
+
+		<div class="container my-5 w-25 border  text-center text-white forme">
+			<h1 class="container my-5 inscrivezvous">Inscrivez-vous !
 			</h1>
 			{{ form_start(registrationForm) }}
 			 
@@ -19,8 +19,12 @@
 			{{ form_row(registrationForm.plainPassword,   {'attr':{'class':'form form-control'}})
 			        }}
 
-			<button type="submit" class="btn btn-success btn-block p-2 my-5">S'inscrire</button>
+			<button type="submit" class="  btn btnvalider btn-block p-2 my-5">S'inscrire</button>
 			{{ form_end(registrationForm) }}
 		</div>
+	
+
+
+	
 {#  #}
 {% endblock %}
