--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -5,10 +5,10 @@
 		<span class="navbar-toggler-icon"></span>
 	</button>
 
-	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+	<div class="collapse navbar-collapse" id="navbarSupportedContent ">
 					<ul class="navbar-nav mr-auto">
 
-						<li class="nav-item">
+						<li class="nav-item textfont " >
 							<a class="nav-link text-white" href="{{path('home_page')}}">
                                 <i class="fa fa-home"></i>
                                 Accueil
