--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -11,7 +11,7 @@
 
 
 			{# formulaire  #}
-			<div class="site-section container my-5 w-75 bg-dark border  text-center text-white">
+			<div class=" container my-5 w-75 border M-5 text-center text-white formulaires">
 				<div class="container my-5">
 					<div class="row my-5">
 						<div class="col-md-7 mb-5 my-5">
@@ -44,8 +44,8 @@
 
 							<div class="row form-group">
 
-								<div class="col-md-12">
-									<input type="submit" class="btn btn-primary btn-block" value="Envoyer">
+								<div class="col-md-12 ">
+									<input type="submit" class="btn bg-color-form btn-block" value="Envoyer">
 
 								</div>
 							</div>
@@ -59,7 +59,7 @@
 							<div
 								class="p-4 mb-3  my-5">
 								{# on affiche les données de contact crée dans le service yam  #}
-								<p class="mb-0 font-weight-bold ">Addresse</p>
+								<p class="mb-0 font-weight-bold inputshape">Addresse</p>
 								<p class="mb-4">{{ contact_adress }}</p>
 
 								<p class="mb-0 font-weight-bold">Phone</p>
