--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
 <br><br>
 
-		<div class="container my-5 w-25 border  text-center text-white forme">
+		<div class="container my-5 w-25 border  text-center text-white formulaires">
 			<h1 class="container my-5 inscrivezvous">Inscrivez-vous !
 			</h1>
 			{{ form_start(registrationForm) }}
