--- a/templates/order/new.html.twig
+++ b/templates/order/new.html.twig
@@ -1,12 +1,112 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Order{% endblock %}
+{% block title %}New Order
+{% endblock %}
 
 {% block body %}
-<div class="container">
-    {{ include('order/_form.html.twig') }}
 
-</div>
 
-    <a href="{{ path('app_order_index') }}">back to list</a>
+	<div class="video-bg">
+		<video width="320" height="240" autoplay loop muted>
+			<source src="https://assets.codepen.io/3364143/7btrrd.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
+	</div>
+	<div class="dark-light">
+		<svg viewbox="0 0 24 24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+			<path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg>
+	</div>
+	<div class="app">
+		<div class="header">
+			<div class="menu-circle"></div>
+			<div class="header-menu">
+				<a class="menu-link is-active" href="{{path('home_page')}}">Accueil</a>
+				<a class="menu-link notify" href="{{path('app_order_new')}}">Commander une course</a>
+				<a class="menu-link" href="{{path('app_contact')}}">Contact</a>
+				<a class="menu-link notify" href="{{path('show_user')}}">Mon profil</a>
+				<a class="menu-link notify" href="{{path('show_order')}}">Mes commandes</a>
+			</div>
+
+			<div class="header-profile">
+				<div class="notification">
+					<span class="notification-number">3</span>
+					<svg viewbox="0 0 24 24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
+						<path d="M18 8A6 6 0 006 8c0 7-3 9-3 9h18s-3-2-3-9M13.73 21a2 2 0 01-3.46 0"/>
+					</svg>
+				</div>
+				<svg viewbox="0 0 512 512" fill="currentColor">
+					<path d="M448.773 235.551A135.893 135.893 0 00451 211c0-74.443-60.557-135-135-135-47.52 0-91.567 25.313-115.766 65.537-32.666-10.59-66.182-6.049-93.794 12.979-27.612 19.013-44.092 49.116-45.425 82.031C24.716 253.788 0 290.497 0 331c0 7.031 1.703 13.887 3.006 20.537l.015.015C12.719 400.492 56.034 436 106 436h300c57.891 0 106-47.109 106-105 0-40.942-25.053-77.798-63.227-95.449z"/>
+				</svg>
+				<img class="profile-img" src="https://images.unsplash.com/photo-1600353068440-6361ef3a86e8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="">
+			</div>
+		</div>
+		<div class="wrapper">
+			<div class="left-side">
+				<div class="side-wrapper">
+					<div class="side-wrapper">
+						<div class="side-title">Présentation</div>
+						<div class="side-menu">
+							<a href="#">
+								Mon histoire...
+							</a>
+							<a href="#">
+								Mes véhicules
+							</a>
+							<a href="#">
+								Vos avis
+							</a>
+
+						</div>
+					</div>
+					<div class="side-title">Services</div>
+					<div class="side-menu">
+						<a href="#">
+
+
+							Mise à disposition
+						</a>
+						<a href="#">
+
+							Chauffeur Privée
+						</a>
+						<a href="#">
+
+							Visite des chateaux
+						</a>
+						<a href="#">+8 personnes</a>
+						<a href="#">Aéroports & Gares</a>
+					</div>
+				</div>
+				<div class="side-wrapper">
+					<div class="side-title">Légal</div>
+					<div class="side-menu">
+						<a href="#">
+							Mentions légals
+						</a>
+						<a href="#">Conditions générales</a>
+						<a href="#">A propos</a>
+					</div>
+				</div>
+			</div>
+			<div class="main-container">
+				<div class="content-wrapper">
+					<div class="content-wrapper-header">
+						<div class="content-wrapper-context">
+							{{ include('order/_form.html.twig') }}
+
+						</div>
+						<img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt="">
+					</div>
+
+
+				</div>
+			</div>
+		</div>
+		<div class="overlay-app"></div>
+	</div>
+
+
+	{# <a href="{{ path('app_order_index') }}">back to list</a> #}
+
+
 {% endblock %}
