--- a/templates/navleft/presentations/avis.html.twig
+++ b/templates/navleft/presentations/avis.html.twig
@@ -1,10 +1,10 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}User index
+{% extends "base.html.twig" %}
+{% block title %}page de contact | formulaire de contact
 {% endblock %}
 
-{% block body %}
+{% block navbar %}{% endblock %}
 
+{% block body %}
 	<div class="video-bg">
 		<video width="320" height="240" autoplay loop muted>
 			<source src="https://assets.codepen.io/3364143/7btrrd.mp4" type="video/mp4">
@@ -45,7 +45,7 @@
 					<div class="side-wrapper">
 						<div class="side-title">Présentation</div>
 						<div class="side-menu">
-							<a href="{{ path('histoire') }}">
+							<a href="{{ path('vehicules') }}">
 								Mon histoire...
 							</a>
 							<a href="#">
@@ -88,24 +88,50 @@
 				</div>
 			</div>
 			<div class="main-container">
+
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
-						<div class="content-wrapper-context">
-							<div class="">
-								<div>
-									<p>Email : {{ app.user.email }}</p>
-									<p>Prénom : {{ app.user.firstname }}</p>
-									<p>Nom : {{ app.user.lastname }}</p>
-								</div>
-								<div>
-									<p>Adresse : {{ app.user.adresse }}</p>
-									<p>Age : {{ app.user.age }}</p>
+						<h1 class="text-center container  ">Entreprise Izy Drive
+						</h1>
+
+					</div>
+					<div class="content-section">
+						<div class="content-section-title"></div>
+						<div class="apps-card">
+							<div class="app-card">
+								<span>
+									IZY DRIVE DANS VOTRE VILLE
+								</span>
+								<div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div>
+								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="#"> #}
+									{# <button class="content-button status-button">Update</button> #}
+									{# <div class="menu"></div> #}
 								</div>
 							</div>
-						</div>
-						<img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt="">
-					</div>
+							<div class="app-card">
+								<span>
+									IZY DRIVE DANS VOTRE VILLE
+								</span>
+								<div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
+								</div>
+								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-EXCELLENCE-SERVICE-CONCIERGERIE.jpg" alt=""> #}
+									{# <button class="content-button status-button">Update</button> #}
+									{# <div class="menu"></div> #}
+								</div>
+							</div>
 
+							<div class="app-card">
+								<span>
+									SERVICE AU KM
+								</span>
+								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
+								<div class="app-card-buttons">{# <button class="content-button status-button">Update</button> #}
+									{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/louer-un-vehicule-avec-chauffeur-a-toulouse-1.jpg" alt="#"> #}
+									{# <div class="menu"></div> #}
+								</div>
+							</div>,
+						</div>
+					</div>
 
 				</div>
 			</div>
@@ -115,3 +141,4 @@
 
 
 {% endblock %}
+{% block footer %}{% endblock %}
