--- a/templates/user/order.user.html.twig
+++ b/templates/user/order.user.html.twig
@@ -45,7 +45,7 @@
 					<div class="side-wrapper">
 						<div class="side-title">Présentation</div>
 						<div class="side-menu">
-							<a href="#">
+							<a href="{{ path('histoire') }}">
 								Mon histoire...
 							</a>
 							<a href="#">
