--- a/templates/navleft/presentations/vehicules.html.twig
+++ b/templates/navleft/presentations/vehicules.html.twig
@@ -91,53 +91,55 @@
 
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
-						
+						<h1 class="text-center container  ">Nos IZyCars | Véhicules
+						</h1>
 
-							
-								<div class="col-md-7 mb-5 my-5">
-								<h3>Formulaire de contact</h3>
-
-									{{ form_start(form)}}
-
-
-
-
-									<div class="row form-group">
-
-										<div class="col-md-12">
-											{{form_row(form.firstName, {'attr':{ 'class': 'form-control'}})}}
-										</div>
-										<div class="col-md-12">
-											{{form_row(form.lastName, {'attr':{ 'class': 'form-control'}})}}
-										</div>
-										<div class="col-md-12">
-											{{form_row(form.email, {'attr':{ 'class': 'form-control'}})}}
-										</div>
-									</div>
-									<div class="row form-group">
-
-										<div class="col-md-12">
-											{{form_row(form.message, {'attr':{ 'class': 'form-control'}})}}
-										</div>
-									</div>
-
-									<div class="row form-group">
-
-										<div class="col-md-12">
-											<input type="submit" class="btn btn-primary btn-block" value="Envoyer">
-
-										</div>
-									</div>
-
-
-									{{ form_end(form)}}
-
-								</div>
-							
-						
-						{# <img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt=""> #}
 					</div>
+					<div class="content-section">
+						<div class="content-section-title"></div>
+						<div class="apps-card">
+							<div class="app-card">
+								<span>
+									IZyCar de classe V
+								</span>
+								{# <div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div> #}
+								<div class="app-card-buttons">
+									<img src="https://chauffeur-vtc-belfort.fr/wp-content/uploads/2020/05/5359-1_thumb-600x330.png" alt="car1" width="" height="200px">
+								{# <button class="content-button status-button">Update</button> #}
+									{# <div class="menu"></div> #}
+								</div>
+								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
+							</div>
+							<div class="app-card">
+								<span>
+									IZyCar de classe S
+								</span>
+								{# <div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
+																																</div> #}
+								<div class="app-card-buttons">
+									<img src="https://chauffeur-vtc-belfort.fr/wp-content/uploads/2020/05/5359-1_thumb-600x330.png" alt="car1" width="" height="200px">
+								{# <button class="content-button status-button">Update</button> #}
+									{# <div class="menu"></div> #}
+								</div>
+								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
+							</div>
 
+							<div class="app-card">
+								<span>
+									IZyCar Le Lixus Ls
+								</span>
+								<div
+									class="app-card-buttons">
+									{# <button class="content-button status-button">Update</button> #}
+									<img
+									src="https://chauffeur-vtc-belfort.fr/wp-content/uploads/2020/05/5359-1_thumb-600x330.png" alt="#" width="" height="200px">
+								{# <div class="menu"></div> #}
+								</div>
+								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
+							</div>,
+
+						</div>
+					</div>
 
 				</div>
 			</div>
@@ -145,74 +147,6 @@
 		<div class="overlay-app"></div>
 	</div>
 
-
-	{# formulaire  #}
-
-
-	{# <div class="container my-5">
-					<div class="row my-5">
-						<div class="col-md-7 mb-5 my-5">
-		
-							{{ form_start(form)}}
-		
-		
-							<div class="row form-group">
-								<div class="col-md-6 mb-3 mb-md-0">
-		                            {{form_row(form.firstName, {'attr':{ 'class': 'form-control'}})}}
-		                        </div>
-								<div class="col-md-6">
-		                         {{form_row(form.lastName, {'attr':{ 'class': 'form-control'}})}}
-		                        
-		                        </div>
-							</div>
-		
-							<div class="row form-group">
-		
-								<div class="col-md-12">
-		                         {{form_row(form.email, {'attr':{ 'class': 'form-control'}})}}
-		                        </div>
-							</div>
-		                    	<div class="row form-group">
-		
-								<div class="col-md-12">
-		                         {{form_row(form.message, {'attr':{ 'class': 'form-control'}})}}
-		                        </div>
-							</div>
-		
-							<div class="row form-group">
-		
-								<div class="col-md-12">
-		                        <input type="submit" class="btn btn-primary btn-block" value="Envoyer">
-		                        
-		                        </div>
-							</div>
-		
-							
-		
-							{{ form_end(form)}}
-		
-						</div>
-						<div class="col-md-5 my-5 bg-dark border  text-center text-white">
-		
-							<div class="p-4 mb-3  my-5">
-								<p class="mb-0 font-weight-bold">Addresse</p>
-								<p class="mb-4">{{ contact_adress }}</p>
-		
-								<p class="mb-0 font-weight-bold">Phone</p>
-								<p class="mb-4">
-									<a href="#">{{ contact_phone }}</a>
-								</p>
-		
-								<p class="mb-0 font-weight-bold">Addresse email</p>
-								<p class="mb-0">
-									<a href="#">{{ contact_email }}</a>
-								</p>
-		
-							</div>
-		
-						</div>
-					</div>
-				</div> #}
 
 {% endblock %}
 {% block footer %}{% endblock %}
