--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -47,7 +47,7 @@
 						<div class="side-title">Présentation</div>
 						<div class="side-menu">
 							<a href="{{ path('histoire') }}">
-								{{histoire}}
+								Mon histoire...
 							</a>
 							<a href="{{ path('vehicules') }}">
 								Mes véhicules
