ajout des routes histroire_avis-accueil-vehicules

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -52,7 +52,7 @@
 							<a href="{{ path('vehicules') }}">
 								Mes véhicules
 							</a>
-							<a href="#">
+							<a href="{{ path('avis') }}">
 								Vos avis
 							</a>
 
