--- a/templates/navleft/presentations/avis.html.twig
+++ b/templates/navleft/presentations/avis.html.twig
@@ -45,13 +45,13 @@
 					<div class="side-wrapper">
 						<div class="side-title">Présentation</div>
 						<div class="side-menu">
-							<a href="{{ path('vehicules') }}">
+							<a href="{{ path('histoire') }}">
 								Mon histoire...
 							</a>
-							<a href="#">
+							<a href="{{ path('vehicules') }}">
 								Mes véhicules
 							</a>
-							<a href="#">
+							<a href="{{ path('avis') }}">
 								Vos avis
 							</a>
 
