--- a/templates/user/order.user.html.twig
+++ b/templates/user/order.user.html.twig
@@ -48,10 +48,10 @@
 							<a href="{{ path('histoire') }}">
 								Mon histoire...
 							</a>
-							<a href="#">
+							<a href="{{ path('vehicules') }}">
 								Mes véhicules
 							</a>
-							<a href="#">
+							<a href="{{ path('avis') }}">
 								Vos avis
 							</a>
 
